--- a/src/App.css
+++ b/src/App.css
@@ -116,3 +116,9 @@ h3 {
   display: flex;
   justify-content: space-between;
 }
+
+@media (max-width: 1029px) {
+  .wrap {
+    display: block;
+  }
+}
