--- a/src/components/Form/index.css
+++ b/src/components/Form/index.css
@@ -26,7 +26,7 @@
     height: 35px;
     color: white;
     transition: .3s;
-
+    margin-bottom: 30px;
     text-transform: uppercase;
 }
 .form__button.generate {
