--- a/src/components/ListOptions/index.css
+++ b/src/components/ListOptions/index.css
@@ -1,6 +1,7 @@
 .list {
     margin-top: 20px;
     margin-left: 20px;
+    width: 100%;
 }
 
 .list__li {
@@ -8,3 +9,9 @@
     font-size: 16px;
     margin-bottom: 10px;
 }
+
+@media (max-width: 1029px) {
+    .list {
+      margin-bottom: 30px;
+    }
+  }
